# tdgl_simulation

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  check.sh  compile_commands.json  glad.c  imgui.ini  main.cpp  out.txt  preamble.tex  vcpkg.json
document/src/: tdgl_doc.tex
include/: boundaryCondition.h  constants.h  device.h  electrode.h  fieldProfile.h  geometry.h  infoPane.h  magneticProfile.h  mesh.h  simulator.h  types.h
include/glad/: glad.h
shaders/: comp.glsl
src/: infoPane.cpp  magneticProfile.cpp  mesh.cpp  simulator.cpp
tdgl_sim/: .gitignore  CMakeLists.txt  PHASE_1_FIXES_APPLIED.md  QUICK_START.md  ROADMAP_PHASES_2_4.md  main.cpp  vcpkg.json
tdgl_sim/ignore/: comp.txt  frag.txt
tdgl_sim/shaders/: .frag.glsl.un~  .vert.glsl.un~  comp.glsl  frag.glsl  frag.glsl~  vert.glsl  vert.glsl~
tdgl_sim/src/: geometry.cpp  infoPane.cpp  mesh.cpp  simulator.cpp
tex_doc/: tdgl_doc.aux  tdgl_doc.fdb_latexmk  tdgl_doc.fls  tdgl_doc.out  tdgl_doc.synctex.gz.sum.synctex  tdgl_doc.tex  tdgl_doc.toc
